--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ bin-debug/
 bin-release/
 [Oo]bj/
 [Bb]in/
-dist/
+./dist/
 
 # Other files and folders
 .settings/
@@ -17,3 +17,4 @@ dist/
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
+
